--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>三花实验室设备排期系统</title>
+    <title>试验智能排程系统</title>
     <link rel="stylesheet" href="styles.css">
     <!-- 引入XLSX库处理Excel文件 -->
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        <h1>三花实验室设备排期系统</h1>
+        <h1>试验智能排程系统</h1>
         <!-- 右上角上传控件 -->
         <div class="header-upload-container">
             <button id="uploadToggleBtn" class="btn-primary">数据上传</button>
@@ -204,7 +204,7 @@
     </main>
 
     <footer>
-        <p>设备排期系统 &copy; 2023 | <a href="README.md" target="_blank">使用说明</a></p>
+        <p>试验智能排程系统 &copy; 2025 | <a href="README.md" target="_blank">使用说明</a></p>
     </footer>
 
     <script src="main.js"></script>
