--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
             <div class="tab-content">
                 <div class="tab-pane active" id="ganttTab">
                     <div id="ganttChart" class="gantt-container" style="height:700px; width:100%;"></div>
+                    <div id="ganttZoomControl" style="padding:10px; text-align:center;">
+                        <input type="range" id="zoomSlider" min="0" max="0" value="0" />
+                    </div>
                 </div>
                 <div class="tab-pane" id="tableTab">
                     <div class="table-container">
